--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
+Politique de Confidentialité
 
+Introduction
+
+Cette politique de confidentialité décrit comment Score224 ("nous", "notre" ou "nos") collecte, utilise et partage les informations vous concernant lorsque vous utilisez notre application mobile Score224 (l'"Application").
+
+Collecte de Données
+
+Informations que nous collectons
+Nous pouvons collecter les types d'informations suivants :
+
+Informations personnelles: Lorsque vous créez un compte, nous pouvons collecter des informations telles que votre nom, adresse e-mail, et d'autres informations de contact.
+
+Données d'utilisation: Nous collectons des informations sur la manière dont vous accédez et utilisez l'Application, y compris votre adresse IP, votre type d'appareil, le système d'exploitation, les pages que vous visitez, l'heure et la date de votre visite, et d'autres statistiques.
+
+Informations de localisation: Si vous nous autorisez, nous pouvons collecter des informations de localisation précises à partir de votre appareil mobile pour fournir des fonctionnalités basées sur la localisation.
+
+Utilisation des Informations
+
+Nous utilisons les informations collectées pour :
+
+Fournir et améliorer notre Service: Pour exploiter et améliorer l'Application, y compris la maintenance, le développement de nouvelles fonctionnalités, et la gestion des performances.
+
+Personnaliser l'expérience utilisateur: Pour personnaliser le contenu et les informations que nous vous envoyons ou affichons, pour offrir des conseils personnalisés et pour personnaliser autrement votre expérience avec notre Application.
+
+Communiquer avec vous: Pour vous envoyer des notifications, des mises à jour, des alertes de sécurité, des messages d'assistance, et d'autres communications.
+
+Analyser les tendances et l'utilisation: Pour surveiller et analyser les tendances, l'utilisation et les activités en relation avec notre Application.
+
+Partage des Informations
+
+Nous ne vendons pas vos informations personnelles à des tiers. Nous pouvons partager des informations vous concernant dans les cas suivants :
+
+Avec des prestataires de services: Nous pouvons partager des informations avec des fournisseurs, des consultants et d'autres prestataires de services qui ont besoin d'accéder à ces informations pour effectuer des travaux pour notre compte.
+
+Pour des raisons légales: Nous pouvons divulguer des informations vous concernant si nous sommes légalement obligés de le faire, ou si nous croyons de bonne foi que cette divulgation est nécessaire pour se conformer à la loi, protéger nos droits ou ceux d'autrui, ou répondre à une demande gouvernementale.
+
+Sécurité des Données
+
+Nous prenons des mesures de sécurité appropriées pour protéger vos informations contre l'accès non autorisé, la modification, la divulgation ou la destruction. Cependant, veuillez noter qu'aucune méthode de transmission sur Internet ou de stockage électronique n'est totalement sécurisée.
+
+Vos Droits
+
+Vous avez le droit d'accéder à, de corriger, de mettre à jour ou de demander la suppression des informations personnelles que nous détenons à votre sujet. Vous pouvez exercer ces droits en nous contactant à l'adresse e-mail fournie ci-dessous.
+
+Modifications de cette Politique de Confidentialité
+
+Nous pouvons mettre à jour notre politique de confidentialité de temps à autre. Nous vous informerons de tout changement en publiant la nouvelle politique de confidentialité sur cette page. Nous vous conseillons de consulter cette politique de confidentialité périodiquement pour prendre connaissance de toute modification.
+
+Nous Contacter
+
+Si vous avez des questions ou des préoccupations concernant cette politique de confidentialité, veuillez nous contacter à : manguemasysylla13@gmail.com
